--- a/app/assets/stylesheets/mixins/colors.scss
+++ b/app/assets/stylesheets/mixins/colors.scss
@@ -1,1 +1,9 @@
+$background-page-container: #ffffff;
+
+$border-blue: #207fff;
+$border-gray: #424242;
+
 $font-black: #323232;
+$font-gray: #424242;
+$font-link: #207fff;
+$font-white: #fefefe;
