--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -1,9 +1,40 @@
 <section class="home">
   
   <header>
+    <h1>
+      cooking blue apron, drinking red wine, writing the results. enojoy!
+    </h1>
+
+    <p>
+      If you haven't heard of <a href="https://www.blueapron.com/" target="_blank">Blue Apron</a> we suggest you click that link and find out. The interesting recipes, the exact amounts you need, the lack of desert... it's a fun and delicous ride (even if there aren't deserts).
+    </p>
   </header>
   
   <footer>
+    <section>
+      <header>
+        <img src="http://i.imgur.com/WqGA5DZ.jpg" />
+      </header>
+      <footer>
+        title here about the thing this is for, and maybe it's long, maybe it's not. If it is long what to do... what to do... hmmm. What to do? I just don't know. I guess it'll just hide itself based on the size of this thing. But really, what are the odd of that?
+      </footer>
+    </section>
   </footer>
+
+  <ul>
+
+    <%# TODO: just sriptlet this to be a loop of shit %>
+    <!-- <li>
+      <section>
+        <header>
+          <img src="http://i.imgur.com/Xc8e4e9.jpg" />
+        </header>
+        <footer>
+          this is a title as well. hooray.
+        </footer>
+      </section>
+    </li> -->
+
+  </ul>
   
 </section>
