--- a/app/views/shared/_site_header.html.erb
+++ b/app/views/shared/_site_header.html.erb
@@ -3,10 +3,20 @@
   <section>
     
     <header>
+      <%= link_to image_tag("blue_cookin_logo_75.png", border: 0), root_url %>
     </header>
 
-    <footer>
-    </footer>
+    <ul>
+      <li>
+        <a href="#">food</a>
+      </li>
+      <li>
+        <a href="#">wine</a>
+      </li>
+      <li>
+        <a href="#">stuff</a>
+      </li>
+    </ul>
 
   </section>
 
