--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -4,9 +4,8 @@
     <h1>
       cooking blue apron, drinking red wine, writing the results. enojoy!
     </h1>
-
     <p>
-      If you haven't heard of <a href="https://www.blueapron.com/" target="_blank">Blue Apron</a> we suggest you click that link and find out. The interesting recipes, the exact amounts you need, the lack of desert... it's a fun and delicous ride (even if there aren't deserts).
+      If you haven't heard of <a href="https://www.blueapron.com/" target="_blank">Blue Apron</a> we suggest you click that link and find out. The interesting recipes, the exact amounts you need, the lack of dessert... it's a fun and delicous ride (even if there aren't desserts).
     </p>
   </header>
   
@@ -21,20 +20,79 @@
     </section>
   </footer>
 
-  <ul>
-
-    <%# TODO: just sriptlet this to be a loop of shit %>
-    <!-- <li>
-      <section>
-        <header>
-          <img src="http://i.imgur.com/Xc8e4e9.jpg" />
-        </header>
-        <footer>
-          this is a title as well. hooray.
-        </footer>
-      </section>
-    </li> -->
-
-  </ul>
+  <section>
+    <header>
+      recent posts
+    </header>
+    <footer>
+      <%= link_to "all posts", posts_url %>
+    </footer>
+    <ul>
+      <%# TODO: just sriptlet this to be a loop of shit %>
+      <li>
+        <section>
+          <header>
+            <img src="http://i.imgur.com/Xc8e4e9.jpg" />
+          </header>
+          <footer>
+            this is a title as well. hooray.
+          </footer>
+        </section>
+      </li>
+      <li>
+        <section>
+          <header>
+            <img src="http://i.imgur.com/Dx4QxlP.jpg" />
+          </header>
+          <footer>
+            where the f%$# is our dessert?!?!1!?1?!
+          </footer>
+        </section>
+      </li>
+      <li>
+        <section>
+          <header>
+            <img src="http://i.imgur.com/wxc0gz5.jpg" />
+          </header>
+          <footer>
+            fish and chips should be true for catfish too.
+          </footer>
+        </section>
+      </li>
+      <li>
+        <section>
+          <header>
+            <img src="http://i.imgur.com/YIattVW.jpg" />
+          </header>
+          <footer>
+            475 degrees might be a bit much.
+          </footer>
+        </section>
+      </li>
+      <li>
+        <section>
+          <header>
+            <img src="http://i.imgur.com/xlo5hRE.jpg" />
+          </header>
+          <footer>
+            a good knife is a great thing. Seriously. F$@ing awesome.
+          </footer>
+        </section>
+      </li>
+      <li>
+        <section>
+          <header>
+            <img src="http://i.imgur.com/F0uFZQi.jpg" />
+          </header>
+          <footer>
+            prep first, it's just easier than trying to do it while cooking.
+          </footer>
+        </section>
+      </li>
+    </ul>
+    <footer>
+      <%= link_to "all posts", posts_url %>
+    </footer>
+  </section>
   
 </section>
