--- a/app/views/shared/_site_footer.html.erb
+++ b/app/views/shared/_site_footer.html.erb
@@ -1,14 +1,23 @@
 <div class="site-footer">
 
   <section>
-
     <ul>
-
       <li>
+        <a href="#">about</a>
       </li>
-
+      <li>
+        <a href="#">disclousre</a>
+      </li>
+      <li>
+        <a href="#">food</a>
+      </li>
+      <li>
+        <a href="#">wine</a>
+      </li>
+      <li>
+        <a href="#">stuff</a>
+      </li>
     </ul>
-
   </section>
 
 </div>
