--- a/app/assets/stylesheets/shared/_site_footer.scss
+++ b/app/assets/stylesheets/shared/_site_footer.scss
@@ -17,9 +17,15 @@ body {
         max-width: 1000px;
         width: 100%;
 
-        > * {
-          display: inline-block;
-          vertical-align: middle;
+        > ul {
+          margin: 0 0 20px 0;
+          padding-top: 20px;
+
+          > li {
+            display: inline-block;
+            margin-right: 20px;
+            vertical-align: middle;
+          }
         }
       }
     }
